--- a/client/src/app/views/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/views/genes/genes-browse/genes-browse.component.html
@@ -10,87 +10,64 @@
     <span nz-typography nzType="secondary"  *ngIf="(isLoading$ | async)">Loading...</span>
   </nz-page-header-title>
 
-  <!--subtitle-->
-  <!-- <nz-page-header-subtitle>This is a subtitle</nz-page-header-subtitle> -->
-
-  <!--tags-->
-  <!-- <nz-page-header-tags>
-       <nz-tag [nzColor]="'blue'">Running</nz-tag>
-       </nz-page-header-tags> -->
-
-  <!--extra-->
-  <!-- <nz-page-header-extra>
-       <button nz-button>Operation</button>
-       <button nz-button>Operation</button>
-       <button nz-button nzType="primary">Primary</button>
-       <button nz-button nzNoAnimation nz-dropdown [nzDropdownMenu]="menu" style="border: none; padding: 0">
-       <i nz-icon nzType="ellipsis" nzTheme="outline" style="font-size: 20px; vertical-align: top;"></i>
-       </button>
-       <nz-dropdown-menu #menu="nzDropdownMenu">
-       <ul nz-menu>
-       <li nz-menu-item>1st menu item length</li>
-       <li nz-menu-item>2nd menu item length</li>
-       <li nz-menu-item>3rd menu item length</li>
-       </ul>
-       </nz-dropdown-menu>
-       </nz-page-header-extra> -->
-
   <!--content-->
   <nz-page-header-content>
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <nz-table #genesTable
-            [nzData]="(genes$ | async)"
-            [nzLoading]="(isLoading$ | async)"
-            [nzLoadingDelay]="500"
-            [nzVirtualForTrackBy]="trackById"
-            [nzScroll]="{ x: '100%', y: '640px' }"
-            [nzFrontPagination]="false"
-            [nzShowPagination]="false">
-            <thead>
-              <tr>
-                <th nzWidth="10%">Name</th>
-                <th nzWidth="20%">Aliases</th>
-                <th nzWidth="25%">Diseases</th>
-                <th nzWidth="25%">Drugs</th>
-                <th nzWidth="3%" nzRight><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
-                <th nzWidth="3%" nzRight><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence count"></i></th>
-                <th nzWidth="3%" nzRight><i nz-icon nzType="civic:assertion" nz-tooltip nzTooltipTitle="Assertion count"></i></th>
-              </tr>
-            </thead>
-            <tbody>
-              <ng-template nz-virtual-scroll let-gene let-id="id">
+          <ng-container *ngIf="{ value: data$ | async } as data">
+            <nz-table #genesTable
+              [nzData]="(genes$ | async)"
+              [nzVirtualForTrackBy]="trackById"
+              [nzLoading]="(isLoading$ | async)"
+              [nzLoadingDelay]="isLoadingDelay"
+              [nzScroll]="{ x: '100%', y: '640px' }"
+              [nzFrontPagination]="false"
+              [nzShowPagination]="false">
+              <thead>
                 <tr>
-                  <td>
-                    <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
-                  </td>
-                  <td>
-                    <span *ngFor="let alias of gene.aliases; last as isLast" >
-                      {{ alias.name }}{{ isLast ? '' : ', ' }}
-                    </span>
-                  </td>
-                  <td>
-                    <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-                      <span *ngFor="let disease of gene.diseases; last as isLast" >
-                        {{ disease.name }}{{ isLast ? '' : ', ' }}
-                      </span>
-                    </p>
-                  </td>
-                  <td>
-                    <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-                      <span *ngFor="let drug of gene.drugs; last as isLast" >
-                        {{ drug.name }}{{ isLast ? '' : ', ' }}
-                      </span>
-                    </p>
-                  </td>
-                  <td nzRight>{{gene.variantCount}}</td>
-                  <td nzRight>{{gene.evidenceItemCount}}</td>
-                  <td nzRight>{{gene.assertionCount}}</td>
+                  <th nzWidth="10%">Name</th>
+                  <th nzWidth="20%">Aliases</th>
+                  <th nzWidth="25%">Diseases</th>
+                  <th nzWidth="25%">Drugs</th>
+                  <th nzWidth="3%" nzRight><i nz-icon nzType="civic:variant" nz-tooltip nzTooltipTitle="Variant count"></i></th>
+                  <th nzWidth="3%" nzRight><i nz-icon nzType="civic:evidence" nz-tooltip nzTooltipTitle="Evidence count"></i></th>
+                  <th nzWidth="3%" nzRight><i nz-icon nzType="civic:assertion" nz-tooltip nzTooltipTitle="Assertion count"></i></th>
                 </tr>
-              </ng-template>
-            </tbody>
-          </nz-table>
+              </thead>
+              <tbody>
+                <ng-template nz-virtual-scroll let-gene let-id="id">
+                  <tr>
+                    <td>
+                      <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
+                    </td>
+                    <td>
+                      <span *ngFor="let alias of gene.aliases; last as isLast" >
+                        {{ alias.name }}{{ isLast ? '' : ', ' }}
+                      </span>
+                    </td>
+                    <td>
+                      <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                        <span *ngFor="let disease of gene.diseases; last as isLast" >
+                          {{ disease.name }}{{ isLast ? '' : ', ' }}
+                        </span>
+                      </p>
+                    </td>
+                    <td>
+                      <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                        <span *ngFor="let drug of gene.drugs; last as isLast" >
+                          {{ drug.name }}{{ isLast ? '' : ', ' }}
+                        </span>
+                      </p>
+                    </td>
+                    <td nzRight>{{gene.variantCount}}</td>
+                    <td nzRight>{{gene.evidenceItemCount}}</td>
+                    <td nzRight>{{gene.assertionCount}}</td>
+                  </tr>
+                </ng-template>
+              </tbody>
+            </nz-table>
+          </ng-container>
           <ng-template #loadingTemplate><i nz-icon nzType="loading"></i></ng-template>
         </div>
       </div>
