Use scrolling with mygeneinfo pathway and domain tables

--- a/client/src/app/components/genes/my-gene-info/my-gene-info.component.html
+++ b/client/src/app/components/genes/my-gene-info/my-gene-info.component.html
@@ -58,7 +58,12 @@
 
       <!-- protein domains tab -->
       <ng-container *ngSwitchCase="2" >
-        <nz-table #proteinDomainsTable [nzData]="info.interpro" nzSize="small">
+        <nz-table #proteinDomainsTable 
+          [nzData]="info.interpro" 
+          [nzScroll]="{x: '100%', y: '200px'}"
+          [nzFrontPagination]="false"
+          [nzShowPagination]="false"
+          nzSize="small">
           <thead>
             <tr>
               <th>Name</th>
@@ -67,24 +72,31 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let protein of proteinDomainsTable.data">
+            <ng-template nz-virtual-scroll let-interpro let-id="id">
+            <tr>
               <td>
-                {{ protein.short_desc }}
+                {{ interpro.short_desc }}
               </td>
               <td>
-                {{ protein.desc }}
+                {{ interpro.desc }}
               </td>
               <td>
-                {{ protein.id }}
+                {{ interpro.id }}
               </td>
             </tr>
+          </ng-template>
           </tbody>
         </nz-table>
       </ng-container>
 
       <!-- pathways tab -->
       <ng-container *ngSwitchCase="3" >
-        <nz-table #pathwaysTable [nzData]="info.pathway" nzSize="small">
+        <nz-table #pathwaysTable 
+          [nzData]="info.pathway" 
+          [nzScroll]="{x: '100%', y: '200px'}"
+          [nzFrontPagination]="false"
+          [nzShowPagination]="false"
+          nzSize="small">
           <colgroup>
             <col width="90%">
             <col width="10%">
@@ -96,17 +108,19 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let pathway of pathwaysTable.data">
-              <td>
-                {{ pathway.name }}
-              </td>
-              <td class="button-col">
-                <a nz-button href="{{ pathway?.link }}" target="_blank"
-                  nzType="default" nzSize="small">
-                  {{ pathway.src}}
-                </a>
-              </td>
-            </tr>
+            <ng-template nz-virtual-scroll let-pathway let-id="name">
+              <tr >
+                <td>
+                  {{ pathway.name }}
+                </td>
+                <td class="button-col">
+                  <a nz-button href="{{ pathway?.link }}" target="_blank"
+                    nzType="default" nzSize="small">
+                    {{ pathway.src}}
+                  </a>
+                </td>
+              </tr>
+            </ng-template>
           </tbody>
         </nz-table>
       </ng-container>
