committing updates before componentizing comments card

--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -55,11 +55,13 @@
                           <nz-comment-content>
                             <p>{{ comment.node.comment }}</p>
                           </nz-comment-content>
-                          <nz-comment-action>Reply to</nz-comment-action>
                         </nz-comment>
                       </nz-list-item>
                     </ng-template>
                   </nz-list>
+                  <nz-card nzType="inner" style="margin-top:16px;" nzTitle="Add a Comment">
+                   Add Comment Form Here
+                  </nz-card>
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="16">
