componentized comment list

--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -41,28 +41,7 @@
           <nz-space-item>
             <div nz-row [nzGutter]="16">
               <nz-col [nzSpan]="8">
-                <nz-card nzTitle="Comments">
-                  <nz-list [nzDataSource]="gene.comments.edges"
-                    [nzRenderItem]="comment"
-                    nzSize="small"
-                    nzItemLayout="horizontal">
-                    <ng-template #comment let-comment>
-                      <nz-list-item>
-                        <nz-comment [nzAuthor]="comment.node.commentor.name"
-                          [nzDatetime]="comment.node.createdAt | timeago">
-                          <nz-avatar *ngIf="comment.node.commentor.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="comment.node.commentor.profileImagePath"></nz-avatar>
-                          <ng-template #noAvatar><nz-avatar nz-comment-avatar nzIcon="civic:curator"></nz-avatar></ng-template>
-                          <nz-comment-content>
-                            <p>{{ comment.node.comment }}</p>
-                          </nz-comment-content>
-                        </nz-comment>
-                      </nz-list-item>
-                    </ng-template>
-                  </nz-list>
-                  <nz-card nzType="inner" style="margin-top:16px;" nzTitle="Add a Comment">
-                   Add Comment Form Here
-                  </nz-card>
-                </nz-card>
+                <cvc-comment-list [comments]="gene.comments.edges"></cvc-comment-list>
               </nz-col>
               <nz-col [nzSpan]="16">
                 <nz-card nzTitle="Revisions" class="card-list">
