--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -42,8 +42,7 @@
             <div nz-row [nzGutter]="16">
               <nz-col [nzSpan]="8">
                 <cvc-comment-list [comments]="gene.comments.edges"
-                  [addFunction]="addComment"
-                  [loadMoreFunction]="loadMoreComments"
+                 (commentSubmitted)="submitComment($event)"
                 ></cvc-comment-list>
               </nz-col>
               <nz-col [nzSpan]="16">
