--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -107,13 +107,13 @@
         </nz-space>
       </div>
     </nz-page-header-content>
-    <nz-page-header-content>
-      <nz-row>
-        <nz-col [nzSpan]="24">
-          <h4>gene.revisions:</h4>
-          <ngx-json-viewer [json]="gene.revisions"></ngx-json-viewer>
-        </nz-col>
-      </nz-row>
-    </nz-page-header-content>
+    <!-- <nz-page-header-content>
+         <nz-row>
+         <nz-col [nzSpan]="24">
+         <h4>gene.revisions:</h4>
+         <ngx-json-viewer [json]="gene.revisions" [expanded]="false"></ngx-json-viewer>
+         </nz-col>
+         </nz-row>
+         </nz-page-header-content> -->
   </nz-page-header>
 </ng-container>
