--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -56,9 +56,20 @@
     <nz-page-header-content>
       <div class="content">
         <router-outlet></router-outlet>
-        <h4>routeGene$:</h4>
-        <ngx-json-viewer [json]="routeGene$ | async" [expanded]="true"></ngx-json-viewer>
       </div>
+      <nz-row>
+        <nz-col [nzSpan]="12">
+          <h4>resolved$: <strong *ngIf="loading$ | async">LOADING...</strong> </h4>
+          <ngx-json-viewer *ngIf="(resolved$ | async) as resolved" [json]="resolved"
+            [expanded]="true"></ngx-json-viewer>
+        </nz-col>
+        <nz-col [nzSpan]="12">
+          <h4>gene$:</h4>
+          <ngx-json-viewer *ngIf="(gene$ | async) as routeGene"
+            [json]="routeGene"
+            [expanded]="true"></ngx-json-viewer>
+        </nz-col>
+      </nz-row>
     </nz-page-header-content>
     <!-- <nz-page-header-content>
          <nz-row>
