--- a/client/src/app/views/genes/genes-summary/genes-summary.component.html
+++ b/client/src/app/views/genes/genes-summary/genes-summary.component.html
@@ -17,37 +17,100 @@
       </div>
     </div>
   </nz-space-item>
-  <!-- <nz-space-item>
-       <div nz-row
-       [nzGutter]="16">
-       <nz-col [nzSpan]="8">
-       <ngx-json-viewer [json]="comments$ | async"></ngx-json-viewer>
-       </nz-col>
-       <nz-col [nzSpan]="16">
-       <ngx-json-viewer [json]="revisions$ | async"></ngx-json-viewer>
-       </nz-col>
-       </div>
-       </nz-space-item> -->
-</nz-space>
-<nz-space>
   <nz-space-item>
-    <nz-row>
+    <div nz-row
+      [nzGutter]="16">
       <nz-col [nzSpan]="8">
-        <h4>gene$: <strong *ngIf="loading$ | async">LOADING...</strong> </h4>
-        <ngx-json-viewer *ngIf="(gene$ | async) as gene "
-          [json]="gene"
-          [expanded]="true"></ngx-json-viewer>
+        <cvc-comment-list [comments]="comments$ | async"
+          [subject]="subject$ | async">
+        </cvc-comment-list>
       </nz-col>
-      <nz-col [nzSpan]="8">
-        <h4>comments$:</h4>
-        <ngx-json-viewer *ngIf="(comments$ | async) as comments" [json]="comments"
-          [expanded]="true"></ngx-json-viewer>
+      <nz-col [nzSpan]="16">
+        <ng-container *ngIf="(revisions$ | async) as revisions" >
+          <nz-card nzTitle="Revisions"
+            class="card-list">
+            <nz-list [nzDataSource]="revisions"
+              class="revision-list"
+              [nzRenderItem]="revision">
+              <ng-template #revision
+                let-revision>
+                <nz-list-item>
+                  <!-- Revision Card -->
+                  <nz-card nzType="inner"
+                    nzSize="small"
+                    [nzTitle]="revCardHeaderTitle"
+                    [nzExtra]="revCardHeaderExtra">
+
+                    <ng-container [ngSwitch]="revision.node.fieldName">
+                      <ng-container *ngSwitchCase="'source_ids'">
+                        <ng-container *ngTemplateOutlet="revDiffSourceIds"></ng-container>
+                      </ng-container>
+                      <ng-container *ngSwitchCase="'description'">
+                        <ng-container *ngTemplateOutlet="revDiffDescription"></ng-container>
+                      </ng-container>
+                    </ng-container>
+                  </nz-card>
+
+                  <!-- Revision Card Templates -->
+                  <!-- header title -->
+                  <ng-template #revCardHeaderTitle>
+                    <i nz-icon
+                      nzType="civic:revision"></i> RID{{ revision.node.id }}
+                    <span>{{ revision.node.linkoutData.name }} Updated</span>
+                  </ng-template>
+                  <!-- header secondary & status -->
+                  <ng-template #revCardHeaderExtra>
+                    <nz-space nzSize="small">
+                      <nz-space-item>
+                        <span nz-typography
+                          nzType="secondary">{{ revision.node.createdAt | timeago }}</span>
+                      </nz-space-item>
+                      <nz-space-item>
+                        <nz-tag>{{ revision.node.status }}</nz-tag>
+                      </nz-space-item>
+                    </nz-space>
+                  </ng-template>
+                </nz-list-item>
+
+                <!-- Field Diff Templates -->
+                <!-- description -->
+                <ng-template #revDiffDescription>
+                  <cvc-gene-description-revision [revision]="revision.node">
+                  </cvc-gene-description-revision>
+                </ng-template>
+                <!-- sources -->
+                <ng-template #revDiffSourceIds>
+                  <cvc-gene-sources-revision [revision]="revision.node">
+                  </cvc-gene-sources-revision>
+                </ng-template>
+
+              </ng-template>
+            </nz-list>
+          </nz-card>
+        </ng-container>
       </nz-col>
-      <nz-col [nzSpan]="8">
-        <h4>viewer$:</h4>
-        <ngx-json-viewer *ngIf="(viewer$ | async) as viewer" [json]="viewer"
-          [expanded]="true"></ngx-json-viewer>
-      </nz-col>
-    </nz-row>
+    </div>
   </nz-space-item>
 </nz-space>
+<!-- <nz-space>
+     <nz-space-item>
+     <nz-row>
+     <nz-col [nzSpan]="8">
+     <h4>gene$: <strong *ngIf="loading$ | async">LOADING...</strong> </h4>
+     <ngx-json-viewer *ngIf="(gene$ | async) as gene "
+     [json]="gene"
+     [expanded]="true"></ngx-json-viewer>
+     </nz-col>
+     <nz-col [nzSpan]="8">
+     <h4>comments$:</h4>
+     <ngx-json-viewer *ngIf="(comments$ | async) as comments" [json]="comments"
+     [expanded]="true"></ngx-json-viewer>
+     </nz-col>
+     <nz-col [nzSpan]="8">
+     <h4>viewer$:</h4>
+     <ngx-json-viewer *ngIf="(viewer$ | async) as viewer" [json]="viewer"
+     [expanded]="true"></ngx-json-viewer>
+     </nz-col>
+     </nz-row>
+     </nz-space-item>
+     </nz-space> -->
