--- a/client/src/app/views/genes/genes-detail/genes-detail.component.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.html
@@ -2,20 +2,20 @@
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal"
-        nzSize="small">
+                nzSize="small">
         <nz-space-item>
           <button routerLink="suggest-revision"
-            nz-button
-            nzType="default"
-            nzSize="small">
+                  nz-button
+                  nzType="default"
+                  nzSize="small">
             <i nz-icon
-              nzType="edit"
-              nzTheme="outline"></i>
+               nzType="edit"
+               nzTheme="outline"></i>
           </button>
         </nz-space-item>
         <nz-space-item>
           <i nz-icon
-            nzType="civic:gene"></i>
+             nzType="civic:gene"></i>
         </nz-space-item>
         {{ gene.name }}
       </nz-space>
@@ -25,24 +25,41 @@
     </nz-page-header-subtitle>
     <nz-page-header-tags>
       <nz-tag [nzColor]="'red'"
-        *ngIf="false">Flagged</nz-tag>
+              *ngIf="false">Flagged</nz-tag>
     </nz-page-header-tags>
 
     <!--extra-->
     <nz-page-header-extra>
-      <button routerLink="comments"
-        nz-button>Comments</button>
-      <button routerLink="revisions"
-        nz-button>Revisions</button>
-      <button nz-dropdown
-        [nzDropdownMenu]="menu"
-        nz-button
-        nzNoAnimation
-        style="border: none; padding: 0">
+      <button routerLink="summary"
+              nz-button>
         <i nz-icon
-          nzType="ellipsis"
-          nzTheme="outline"
-          style="font-size: 20px; vertical-align: top;"></i>
+           nzType="pic-right"></i>Summary
+      </button>
+      <button routerLink="comments"
+              nz-button>
+        <i nz-icon
+           nzType="civic:comment"></i>Comments
+        <span nz-typography
+              nzType="secondary"
+              *ngIf="commentsTotal > 0">&nbsp;({{ commentsTotal }})</span>
+      </button>
+      <button routerLink="revisions"
+              nz-button>
+        <i nz-icon
+           nzType="civic:revision"></i>Revisions
+        <span nz-typography
+              nzType="secondary"
+              *ngIf="revisionsTotal > 0">&nbsp;({{ revisionsTotal }})</span>
+      </button>
+      <button nz-dropdown
+              [nzDropdownMenu]="menu"
+              nz-button
+              nzNoAnimation
+              style="border: none; padding: 0">
+        <i nz-icon
+           nzType="ellipsis"
+           nzTheme="outline"
+           style="font-size: 20px; vertical-align: top;"></i>
       </button>
       <nz-dropdown-menu #menu="nzDropdownMenu">
         <ul nz-menu>
